Fixed vertical alignment on page jumbotron

--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -1940,16 +1940,22 @@ article{
     -webkit-box-shadow: 1px 1px 5px #000;
     position: relative;
     z-index: 2;
+    display: table;
+}
+
+div#byblos-page-jumbotron header.entry-header {
+    display: table-cell;
+    vertical-align: middle;
 }
 
 #byblos-page-jumbotron .entry-title{
-    margin-top: 150px;
     text-align: center;
     color: #fff;
     font-size: 46px;
     z-index: 999;
     position: relative;
     text-shadow: 1px 2px rgb(51, 51, 51);
+    line-height: normal;
 }
 
 .parallax-window {
